--- a/templates/sign.html
+++ b/templates/sign.html
@@ -117,13 +117,68 @@ body, html {
     transform: translateX(-50%);
     top: 24%;
 }
-.plz{
-    z-index: 3;
-    position: absolute;
+.col-auto.auto2 {
+    top:85%;
 }
+
 .col-auto{
     z-index: 3;
     position: absolute;
+    top:75%;
+    left: 50%;
+    transform: translate(-50%);
+    display: block;
+}
+input#submit {
+    width: 260px;
+     padding: 15px 80px;
+    position: absolute;
+    top: 60%;
+    transform: translate(-50%);
+    left: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 45px;
+    display: block;
+    border: 0px;
+    font-family: sansita;
+    font-size: 1.3rem;
+    box-shadow: 0px 0px 14px -7px #ffc571;
+    background-image: linear-gradient(45deg, #7C3400 0%, #271A00 51%, #7C3400 100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+input[type=file]::file-selector-button {
+   padding: 12px 80px;
+    position: absolute;
+    top: 55%;
+    transform: translate(-50%);
+    left: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 45px;
+    display: block;
+    border: 0px;
+    font-family: sansita;
+    font-size: 1rem;
+    box-shadow: 0px 0px 14px -7px #ffc571;
+    background-image: linear-gradient(45deg, #6f5e52 0%, #271A00 51%, #5d5149 100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+input[type=file]::file-selector-button:hover {
+  background: #4d4d4d;
+  color: #fff;
 }
 </style>
 <section id="signIn" class="demo">
@@ -142,11 +197,10 @@ body, html {
     {% if file_url %}
 {#                <!-이미지 디스플레이 div>#}
             <div class="imgUpload">
-                <img src="{{ file_url }}" style="width: 400px;">
+                <img src="{{ file_url }}" style="width: 307px;height: 350px;border-radius: 25px;">
             </div>
 
     {% endif %}
-    <button class="button-87" role="button" ><a href="#section02">CHECK!</a></button>
 
   <form method="post" enctype="multipart/form-data">
                     {{ form.hidden_tag() }}
@@ -157,8 +211,10 @@ body, html {
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         {{  form.photo(class="form-control") }}
+
                     </div>
-                    <div class="col-auto">
+                    <div class="col-auto auto2">
+
                         {{  form.submit(class="btnbtn-success") }}
                     </div>
                 </div>
