--- a/templates/sign.html
+++ b/templates/sign.html
@@ -197,7 +197,7 @@ input[type=file]::file-selector-button:hover {
     {% if file_url %}
 {#                <!-이미지 디스플레이 div>#}
             <div class="imgUpload">
-                <img src="{{ file_url }}" style="width: 307px;height: 350px;border-radius: 25px;">
+                <img src="{{ file_url }}" style=" width: 100%;height: 100%;border-radius: 25px;">
             </div>
 
     {% endif %}
