--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>File Upload and show image</title>
-  </head>
-  <body>
-    <div class="container">
-        <div class="row">
-            <div class="'col-6mx-auto mt-5 text-center">
+<html>
+<head>
+  <title>Food Search</title>
+  <script>
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+      } else {
+        alert("Geolocation is not supported by this browser.");
+      }
+    }
 
-                <h1 class="mb-5">Flask Image Upload and Show</h1>
-
-                <form method="post" enctype="multipart/form-data">
-                    {{ form.hidden_tag() }}
-
-                    {% for error in form.photo.errors %}
-                        <span style="color: red;">{{ error }}</span>
-                    {% endfor %}
-                <div class="row justify-content-center">
-                    <div class="col-auto">
-                        {{  form.photo(class="form-control") }}
-                    </div>
-                    <div class="col-auto">
-                        {{  form.submit(class="btnbtn-success") }}
-                    </div>
-                </div>
-
-                </form>
-
-            {% if file_url %}
-{#                <!-이미지 디스플레이 div>#}
-            <div class="mt-5">
-                <img src="{{ file_url }}" style="width: 400px;">
-            </div>
-            {% endif %}
-
-            </div>
-        </div>
-    </div>
-  </body>
+    function showPosition(position) {
+      document.getElementById("current_location").value = position.coords.latitude + "," + position.coords.longitude;
+    }
+  </script>
+</head>
+<body>
+  <h1>Search for Food</h1>
+  <form action="/search" method="post">
+    <button type="button" onclick="getLocation()">Use Current Location</button>
+    <br><br>
+    <label for="radius">Radius:</label>
+    <input type="text" name="radius" id="radius" value="5000">
+    <br>
+    <label for="keyword">Food:</label>
+    <input type="text" name="keyword" id="keyword" required>
+    <br>
+    <input type="hidden" name="current_location" id="current_location">
+    <button type="submit">Search</button>
+  </form>
+</body>
 </html>
