font file 이동 , sign html 수정

--- a/templates/result.html
+++ b/templates/result.html
@@ -17,12 +17,12 @@
 
             @font-face {
         font-family: 'sansita';
-        src: url("Sansita/SansitaOne.ttf") format("truetype") ;
+        src: url("../static/Sansita/SansitaOne.ttf") format("truetype") ;
         font-weight: 400;
         }
           @font-face {
         font-family: 'fugaz';
-        src: url("Fugaz_One/FugazOne-Regular.ttf") format("truetype") ;
+        src: url("../static/Fugaz_One/FugazOne-Regular.ttf") format("truetype") ;
         font-weight: 400;
         }
 
