--- a/templates/sign.html
+++ b/templates/sign.html
@@ -293,14 +293,14 @@ display: none;
     </div>
     <div class="bgLogin" id="loginboxBg">
         <div class="loginbox" >
-            <form action="#" id="loginboxForm">
+            <form action="/login_check" id="loginboxForm">
                 <!--작성하지 않아도 문제는 없음-->
                 <fieldset>
                     <legend>로그인 구역</legend>
                     <label for="loginid">ID (E-mail)</label>
-                    <input type="text" id="loginid" placeholder="Enter your ID(E-mail)">
+                    <input type="text" id="loginid" name="username" placeholder="Enter your ID(E-mail)">
                     <label for="loginpw">PASSWORD</label>
-                    <input type="password" id="loginpw" placeholder="Enter your PASSWORD">
+                    <input type="password" id="loginpw" name="password" placeholder="Enter your PASSWORD">
                     <ul>
                         <li><a href="#">ID/PASSWORD</a></li>
                         <li><a href="#">SING UP</a></li>
