make result fuction

--- a/templates/sign.html
+++ b/templates/sign.html
@@ -332,7 +332,10 @@ display: none;
                     <div class="col-auto auto2">
 
                         {{  form.submit(class="btnbtn-success") }}
-                          <button class="button-87" ><a href="../static/result.html">check!</button>
+
+                          <form action='/result'>
+                          <button class="button-87" >check!</button>
+                        </form>
                     </div>
                 </div>
 
