--- a/templates/sign.html
+++ b/templates/sign.html
@@ -81,13 +81,14 @@ body, html {
 }
 
 .button-87 {
-  padding: 15px 80px;
+   padding: 13px 80px;
     position: absolute;
     transform: translate(-50%);
-    left: 61%;
+    left: 60%;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
+    top: 85%;
     background-size: 200% auto;
     color: white;
     border-radius: 45px;
@@ -129,12 +130,12 @@ body, html {
     display: block;
 }
 input#submit {
-       width: 260px;
-    padding: 15px 80px;
+    width: 260px;
+    padding: 13px 80px;
     position: absolute;
     /* top: 60%; */
     transform: translate(-50%);
-    left: 40%;
+    left: 41%;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
@@ -333,12 +334,14 @@ display: none;
 
                         {{  form.submit(class="btnbtn-success") }}
 
-                          <form action='/result'>
-                          <button class="button-87" >check!</button>
-                        </form>
+
                     </div>
+
                 </div>
 
+                </form>
+                <form action='/result'>
+                     <button class="button-87" >check!</button>
                 </form>
 
 </section>
