--- a/templates/result.html
+++ b/templates/result.html
@@ -182,9 +182,10 @@ table.type04 td {
 
             <img src="../static/img/meat.png">
             <table class="type04">
+                {% for place in data['results'] %}
               <tr>
-                <th scope="row">음식점</th>
-                <td>내용이 들어갑니다.</td>
+                <th scope="row">{{ place['name'] }}</th>
+                <td>{{ place['vicinity'] }}</td>
               </tr>
 {#              <tr>#}
 {#                <th scope="row">항목명</th>#}
@@ -194,6 +195,7 @@ table.type04 td {
 {#                <th scope="row">항목명</th>#}
 {#                <td>내용이 들어갑니다.</td>#}
 {#              </tr>#}
+                {% endfor %}
             </table>
 
         </div>
