running model, match food

--- a/templates/result.html
+++ b/templates/result.html
@@ -167,7 +167,7 @@ table.type04 td {
 
             <div class="profile">
             </div>
-            <p class="feelingResult">YOU FEEL HAPPY!</p>
+            <p class="feelingResult">YOU FEEL {{ result }}!</p>
             <div class="feelingText">
                 <p class="feelingRate">DISGUST: 0.35%</p>
                 <p class="feelingRate">SAD: 0.235%</p>
