--- a/templates/result.html
+++ b/templates/result.html
@@ -166,7 +166,7 @@ table.type04 td {
         <div class="fixLayer">
 
             <div class="profile">
-                <img src="../uploads/for_test.jpg" class="profileImg">
+                <img src="{{ uploaded_image }}" class="profileImg">
             </div>
             <p class="feelingResult">YOU FEEL {{ result }}!</p>
             <div class="feelingText">
