--- a/templates/display_image.html
+++ b/templates/display_image.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <img src="{{ image_path }}">
+    <img src="{{ url_for('static', filename=image_path) }}">
   </body>
 </html>
