--- a/templates/company.html
+++ b/templates/company.html
@@ -9,8 +9,9 @@
     background: #FEE6E3;
 }
 #section04{
-    height: 50vh;
+    height: 80vh;
     background: white;
+
 }
 .contact-wrapper {
     position: absolute;
@@ -833,12 +834,13 @@ body {
   text-align: center;
 }
 .cards .card article h2 {
-  color: white;
-  margin: 0;
-  padding: 40px 20px 10px 20px;
-  font-weight: 500;
-  font-size: 24px;
-  letter-spacing: 0.5px;
+    color: white;
+    margin: 0;
+    font-family: 'fugaz';
+    padding: 40px 20px 10px 20px;
+    font-weight: 500;
+    font-size: 24px;
+    letter-spacing: 0.5px;
 }
 .cards .card article .title {
   color: white;
@@ -848,7 +850,7 @@ body {
 }
 .cards .card article .desc {
   padding: 10px 30px;
-  font-size: 14px;
+      font-size: 21px;
   text-align: center;
   line-height: 24px;
   color: #666;
@@ -1059,7 +1061,7 @@ background: pink;
 .pst{
    font-size: 2rem;
     font-weight: 600;
-    top: 25%;
+    top: 32%;
     left: 50%;
     position: absolute;
     transform: translate(-50%);
@@ -1164,6 +1166,7 @@ body, html {
           position: absolute;
           margin-left: 330%;
           top: 190%;
+
           font-size: 1.5rem;
         }
 
@@ -1621,6 +1624,10 @@ section {
     opacity: 0;
   }
 }
+.finalText{
+    position: absolute;
+    left: -4%;
+}
 @keyframes sdb10 {
   0% {
     transform: translate(0, 0);
@@ -1964,11 +1971,9 @@ width: 90%;
 
   <header>
     <div class="navbar">
-      <a class="link-3" href="#section02">SIGN IN</a>
-      <a class="link-3" href="#section02">CONTACT</a>
+      <a class="link-3" href="#section03">CONTACT</a>
       <a class="link-3" href="#section02">ABOUT</a>
       <a class="link-3" href="#section02">HOW TO</a>
-      <a class="link-3" href="#section02">SERVICES</a>
       <a class="link-3" href="#first">
         <img src="../static/img/home.png" class="homeimg"></a>
 
@@ -1982,7 +1987,7 @@ width: 90%;
       <div class="main">
         <img class="meat" src='../static/img/hamburger.png'>
       </div>
-      <button class="button-87" role="button" ><a href="#section02">TRY IT MORE!</a></button>
+      <button class="button-87" role="button" ><a href="#section02">GET START!</a></button>
     </div>
     <!--    <div class="textBox">-->
     <!--      <div>-->
@@ -2119,7 +2124,10 @@ width: 90%;
   <div id="container"></div>
 </section>
 <section id="section04" class="demo">
+<div>
+    <img src="../static/img/IMG.png" class="finalText">
 
+</div>
 </section>
 <script id="template">
    <div class="contact-wrapper">
